🚧 #17 bot CRUD
